--- a/template/output.html
+++ b/template/output.html
@@ -371,6 +371,159 @@
       
       <!--[if mso | IE]></td></tr></table><![endif]-->
     
+    <!-- Locations -->
+      
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    
+      
+      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
+        
+        <table
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+        >
+          <tbody>
+            <tr>
+              <td
+                 style="direction:ltr;font-size:0px;padding:0;text-align:left;"
+              >
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
+            
+      <div
+         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+      >
+        
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"
+      >
+        <tbody>
+          <tr>
+            <td  style="vertical-align:top;padding:0;">
+              
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
+      >
+        <tbody>
+          <table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0 4px;">
+            <tr>
+                <td style="white-space: nowrap; padding-right: 8px;">
+                  <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data&#x3D;!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
+                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                    <span>Miami</span>
+                  </a>
+                </td>
+                <td style="white-space: nowrap; padding-right: 8px;">
+                  <a href="https://www.google.com/maps/place/250+Park+Ave+%237th,+New+York,+NY+10017,+USA/@40.7551183,-73.9785697,17z/data&#x3D;!3m1!4b1!4m6!3m5!1s0x89c258fdebddb677:0xa779d92ce5daaa58!8m2!3d40.7551143!4d-73.9759948!16s%2Fg%2F11lkj5k_4w?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
+                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                    <span>New York</span>
+                  </a>
+                </td>
+                <td style="white-space: nowrap; padding-right: 8px;">
+                  <a href="https://www.google.com/maps/place/Gonzalo+Law+-+Ohio/@41.5013866,-81.6911661,17.88z/data&#x3D;!3m1!5s0x8830e157c586f7a5:0xf55a56096740a787!4m14!1m7!3m6!1s0x8830fa7f9502942b:0x5717885f83f1e3d6!2s600+Superior+Ave+E+%231300,+Cleveland,+OH+44114,+USA!3b1!8m2!3d41.5013147!4d-81.6897723!3m5!1s0x8830fa7f9426e30d:0xc306b3af3fa521e3!8m2!3d41.50138!4d-81.6895733!16s%2Fg%2F1tgkhycm?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
+                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                    <span>Cleveland</span>
+                  </a>
+                </td>
+                <td style="white-space: nowrap; padding-right: 8px;">
+                  <a href="https://www.google.com/maps/place/747+SW+2nd+Ave+%23190b,+Gainesville,+FL+32601,+USA/@29.6499443,-82.3356049,17z/data&#x3D;!3m1!4b1!4m5!3m4!1s0x88e8a38fbec1e0e1:0xe54e967c4b78ca81!8m2!3d29.6499397!4d-82.33303?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
+                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
+                    <span>Gainesville</span>
+                  </a>
+                </td>
+            </tr>
+          </table>
+        </tbody>
+      </table>
+    
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+      </div>
+    
+          <!--[if mso | IE]></td></tr></table><![endif]-->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
+      </div>
+    
+      
+      <!--[if mso | IE]></td></tr></table><![endif]-->
+    
+    <!-- Services -->
+      
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    
+      
+      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
+        
+        <table
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+        >
+          <tbody>
+            <tr>
+              <td
+                 style="direction:ltr;font-size:0px;padding:0;text-align:left;"
+              >
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
+            
+      <div
+         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+      >
+        
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"
+      >
+        <tbody>
+          <tr>
+            <td  style="vertical-align:top;padding:0;">
+              
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
+      >
+        <tbody>
+          <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+                <td class="service-tag">
+                  <span>International</span>
+                </td>
+                <td class="service-tag">
+                  <span>Non-Profits</span>
+                </td>
+                <td class="service-tag">
+                  <span>M&amp;A</span>
+                </td>
+                <td class="service-tag">
+                  <span>Contracts</span>
+                </td>
+                <td class="service-tag">
+                  <span>IP</span>
+                </td>
+            </tr>
+          </table>
+        </tbody>
+      </table>
+    
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+      </div>
+    
+          <!--[if mso | IE]></td></tr></table><![endif]-->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
+      </div>
+    
+      
+      <!--[if mso | IE]></td></tr></table><![endif]-->
+    
     <!-- Business Information -->
       
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
@@ -403,52 +556,7 @@
          border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
       >
         <tbody>
-          <!-- Locations --><table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0 12px;">
-            <tr>
-                <td style="white-space: nowrap; padding-right: 8px;">
-                  <a href="https://www.google.com/maps/place/Gonzalo+Law+Miami/@25.7612322,-80.1936558,17z/data&#x3D;!3m2!4b1!5s0x88db8059298cca51:0x3baf46daaa122580!4m6!3m5!1s0x88d9b755508c5a73:0x7b86035a9f7e601c!8m2!3d25.7612274!4d-80.1910809!16s%2Fg%2F11rmq9hk5z?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
-                    <span>Miami</span>
-                  </a>
-                </td>
-                <td style="white-space: nowrap; padding-right: 8px;">
-                  <a href="https://www.google.com/maps/place/250+Park+Ave+%237th,+New+York,+NY+10017,+USA/@40.7551183,-73.9785697,17z/data&#x3D;!3m1!4b1!4m6!3m5!1s0x89c258fdebddb677:0xa779d92ce5daaa58!8m2!3d40.7551143!4d-73.9759948!16s%2Fg%2F11lkj5k_4w?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
-                    <span>New York</span>
-                  </a>
-                </td>
-                <td style="white-space: nowrap; padding-right: 8px;">
-                  <a href="https://www.google.com/maps/place/Gonzalo+Law+-+Ohio/@41.5013866,-81.6911661,17.88z/data&#x3D;!3m1!5s0x8830e157c586f7a5:0xf55a56096740a787!4m14!1m7!3m6!1s0x8830fa7f9502942b:0x5717885f83f1e3d6!2s600+Superior+Ave+E+%231300,+Cleveland,+OH+44114,+USA!3b1!8m2!3d41.5013147!4d-81.6897723!3m5!1s0x8830fa7f9426e30d:0xc306b3af3fa521e3!8m2!3d41.50138!4d-81.6895733!16s%2Fg%2F1tgkhycm?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
-                    <span>Cleveland</span>
-                  </a>
-                </td>
-                <td style="white-space: nowrap; padding-right: 8px;">
-                  <a href="https://www.google.com/maps/place/747+SW+2nd+Ave+%23190b,+Gainesville,+FL+32601,+USA/@29.6499443,-82.3356049,17z/data&#x3D;!3m1!4b1!4m5!3m4!1s0x88e8a38fbec1e0e1:0xe54e967c4b78ca81!8m2!3d29.6499397!4d-82.33303?entry&#x3D;ttu&amp;g_ep&#x3D;EgoyMDI1MDMyMy4wIKXMDSoASAFQAw%3D%3D" class="location-link">
-                    <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
-                    <span>Gainesville</span>
-                  </a>
-                </td>
-            </tr>
-          </table><!-- Services --><table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
-            <tr>
-                <td class="service-tag">
-                  <span>International</span>
-                </td>
-                <td class="service-tag">
-                  <span>Non-Profits</span>
-                </td>
-                <td class="service-tag">
-                  <span>M&amp;A</span>
-                </td>
-                <td class="service-tag">
-                  <span>Contracts</span>
-                </td>
-                <td class="service-tag">
-                  <span>IP</span>
-                </td>
-            </tr>
-          </table><!-- Badges --><table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
+          <!-- Badges --><table cellpadding="0" cellspacing="0" border="0" style="margin: 8px 0;">
             <tr>
               <!-- Awards Column -->
               <td style="padding-right: 16px; vertical-align: top;" class="awards-column">
