--- a/template/output.html
+++ b/template/output.html
@@ -40,14 +40,14 @@
     
     
     <style type="text/css">
-      @media only screen and (min-width:480px) {
+      @media only screen and (min-width:400px) {
         .mj-column-per-100 { width:100% !important; max-width: 100%; }
 .mj-column-px-100 { width:100px !important; max-width: 100px; }
 .mj-column-per-75 { width:75% !important; max-width: 75%; }
 .mj-column-per-50 { width:50% !important; max-width: 50%; }
       }
     </style>
-    <style media="screen and (min-width:480px)">
+    <style media="screen and (min-width:400px)">
       .moz-text-html .mj-column-per-100 { width:100% !important; max-width: 100%; }
 .moz-text-html .mj-column-px-100 { width:100px !important; max-width: 100px; }
 .moz-text-html .mj-column-per-75 { width:75% !important; max-width: 75%; }
@@ -59,7 +59,7 @@
     
     <style type="text/css">
 
-    @media only screen and (max-width:479px) {
+    @media only screen and (max-width:399px) {
       table.mj-full-width-mobile { width: 100% !important; }
       td.mj-full-width-mobile { width: auto !important; }
     }
@@ -179,7 +179,9 @@
       */
 
       /* Responsive styles for badges section */
-      @media screen and (max-width: 400px) {
+      @media screen and (max-width: 400px),
+      screen and (max-width: 800px) and (-webkit-min-device-pixel-ratio: 2),
+      screen and (max-width: 800px) and (min-resolution: 192dpi) {
         .awards-column .badge-cell {
           margin-right: 0;
         }
@@ -193,6 +195,10 @@
           width: 100% !important;
           display: block !important;
         }
+
+        /*  .media-column {
+          margin-top: 8px;
+        } */
       }
     </style>
     <!-- Import Google Fonts -->
@@ -201,13 +207,13 @@
 <!-- Custom CSS -->
 <!-- Variables -->
   </head>
-  <body style="word-spacing:normal;">
+  <body style="word-spacing:normal;background-color:#ffffff;">
     
     <div style="display:none;font-size:1px;color:#ffffff;line-height:1px;max-height:0px;max-width:0px;opacity:0;overflow:hidden;">Nouvelle L. Gonzalo - Email Signature</div>
   
     
       <div
-         style="" lang="und" dir="auto"
+         style="background-color:#ffffff;" lang="und" dir="auto"
       >
         <!-- Main Content -->
       
@@ -401,6 +407,78 @@
       
       <!--[if mso | IE]></td></tr></table><![endif]-->
     
+    <!-- Services -->
+      
+      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
+    
+      
+      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
+        
+        <table
+           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
+        >
+          <tbody>
+            <tr>
+              <td
+                 style="direction:ltr;font-size:0px;padding:0;text-align:left;"
+              >
+                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
+            
+      <div
+         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
+      >
+        
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"
+      >
+        <tbody>
+          <tr>
+            <td  style="vertical-align:top;padding:0;">
+              
+      <table
+         border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
+      >
+        <tbody>
+          <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
+            <tr>
+                <td class="service-tag">
+                  <span>International</span>
+                </td>
+                <td class="service-tag">
+                  <span>Non-Profits</span>
+                </td>
+                <td class="service-tag">
+                  <span>M&amp;A</span>
+                </td>
+                <td class="service-tag">
+                  <span>Contracts</span>
+                </td>
+                <td class="service-tag">
+                  <span>IP</span>
+                </td>
+            </tr>
+          </table>
+        </tbody>
+      </table>
+    
+            </td>
+          </tr>
+        </tbody>
+      </table>
+    
+      </div>
+    
+          <!--[if mso | IE]></td></tr></table><![endif]-->
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        
+      </div>
+    
+      
+      <!--[if mso | IE]></td></tr></table><![endif]-->
+    
     <!-- Locations -->
       
       <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
@@ -458,78 +536,6 @@
                     <img src="https://github.com/mshahzebraza/ganzalo-email-signature/blob/main/assets/v2/location-pin-v2.png?raw&#x3D;true" alt="Location" width="10" height="13" style="vertical-align: middle; padding-right: 2px;">
                     <span>Gainesville</span>
                   </a>
-                </td>
-            </tr>
-          </table>
-        </tbody>
-      </table>
-    
-            </td>
-          </tr>
-        </tbody>
-      </table>
-    
-      </div>
-    
-          <!--[if mso | IE]></td></tr></table><![endif]-->
-              </td>
-            </tr>
-          </tbody>
-        </table>
-        
-      </div>
-    
-      
-      <!--[if mso | IE]></td></tr></table><![endif]-->
-    
-    <!-- Services -->
-      
-      <!--[if mso | IE]><table align="center" border="0" cellpadding="0" cellspacing="0" class="left-align-section-outlook" role="presentation" style="width:400px;" width="400" ><tr><td style="line-height:0px;font-size:0px;mso-line-height-rule:exactly;"><![endif]-->
-    
-      
-      <div  class="left-align-section" style="margin:0px auto;max-width:400px;">
-        
-        <table
-           align="center" border="0" cellpadding="0" cellspacing="0" role="presentation" style="width:100%;"
-        >
-          <tbody>
-            <tr>
-              <td
-                 style="direction:ltr;font-size:0px;padding:0;text-align:left;"
-              >
-                <!--[if mso | IE]><table role="presentation" border="0" cellpadding="0" cellspacing="0"><tr><td class="" style="vertical-align:top;width:400px;" ><![endif]-->
-            
-      <div
-         class="mj-column-per-100 mj-outlook-group-fix" style="font-size:0px;text-align:left;direction:ltr;display:inline-block;vertical-align:top;width:100%;"
-      >
-        
-      <table
-         border="0" cellpadding="0" cellspacing="0" role="presentation" width="100%"
-      >
-        <tbody>
-          <tr>
-            <td  style="vertical-align:top;padding:0;">
-              
-      <table
-         border="0" cellpadding="0" cellspacing="0" role="presentation" style="" width="100%"
-      >
-        <tbody>
-          <table style="margin-top: 6px;" cellpadding="0" cellspacing="0" border="0">
-            <tr>
-                <td class="service-tag">
-                  <span>International</span>
-                </td>
-                <td class="service-tag">
-                  <span>Non-Profits</span>
-                </td>
-                <td class="service-tag">
-                  <span>M&amp;A</span>
-                </td>
-                <td class="service-tag">
-                  <span>Contracts</span>
-                </td>
-                <td class="service-tag">
-                  <span>IP</span>
                 </td>
             </tr>
           </table>
